--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <nav>
         <img src="" alt="logo">
         <section class="nav-container">
-            <a href="#projetos">Projetos</a>
-            <a href="#sobre">Sobre</a>
-            <a href="#contato">Contato</a>
+            <a onclick="smoothScroll('#projetos')">Projetos</a>
+            <a onclick="smoothScroll('#sobre')">Sobre</a>
+            <a onclick="smoothScroll('#contato')">Contato</a>
         </section>
         <section class="nav-darkmode-button">
             <button>Tema</button>
@@ -248,5 +248,6 @@
         </div>
         </section>
     </main>
+    <script src="/styles/style.js"></script>
 </body>
 </html>
