--- a/index.html
+++ b/index.html
@@ -110,16 +110,17 @@
             <div class="trabalho-container-texto">
                 <p>Iniciando minha trajetória no desenvolvimento web, atualmente estou envolvido em diversos projetos independentes, bem como em iniciativas vinculadas à empresa em que trabalho. Movido pela paixão pelo aspecto visual, dedico-me a aprimorar minha especialização na experiência do usuário. Meu objetivo vai além da criação de sites, aplicações e layouts; busco desenvolver soluções que proporcionem uma experiência memorável para o usuário, cliente ou consumidor. Assim, meu trabalho visa criar uma impressão marcante para a marca, a pessoa ou o negócio em questão.</p>
             </div>
-            <button>ENTRE EM CONTATO</button>
+            <button onclick="smoothScroll('#contato')">ENTRE EM CONTATO</button>
         </section>
         <section class="projetos-container" id="projetos">
             <h1>Alguns projetos que já desenvolvi:</h1>
             <div class="projetos-container-galeria">
-                <div class="projeto" id="portifolio" aria-label="Projeto de Portfólio">
+                <div class="projeto" id="portifolio" aria-label="Projeto de Portfólio" onclick="redirecionarParaURL('https://www.antunesprojects.online')">
+                    <h1 class="projeto-texto-oculto">antunesprojects.online</h1>
                     <img src="/assets/img-portifolio.png" alt="projeto de portifolio">
                     <h1>Portifólio</h1>
                     <div class="line"></div>
-                    <p>Explore meu universo criativo neste projeto de portfólio, onde utilizei HTML para estruturar, CSS para estilizar e JavaScript para adicionar interatividade. Navegue pelas seções para descobrir mais sobre mim, meus projetos e habilidades.</p>
+                     <p>Explore meu universo criativo neste projeto de portfólio, onde utilizei HTML para estruturar, CSS para estilizar e JavaScript para adicionar interatividade. Navegue pelas seções para descobrir mais sobre mim, meus projetos e habilidades.</p>
                     <div class="projeto-icones">
                         <a href="google.com">
                             <svg width="800px" height="800px" viewBox="0 0 20 20" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -161,7 +162,8 @@
                         </a>
                     </div>
                 </div>
-                <div class="projeto" id="empresa" aria-label="Projeto da Empresa">
+                <div class="projeto" id="empresa" aria-label="Projeto da Empresa" onclick="redirecionarParaURL('https://www.mbembalagens.com')">
+                    <h1 class="projeto-texto-oculto">mbembalagens.com</h1>
                     <img src="/assets/img-portifolio.png" alt="projeto de portifolio">
                     <h1>Site empresarial</h1>
                     <div class="line"></div>
@@ -207,8 +209,9 @@
                         </a>
                     </div>
                 </div>
-                <div class="projeto" id="casamento" aria-label="Projeto de Casamento">
+                <div class="projeto" id="casamento" aria-label="Projeto de Casamento" onclick="redirecionarParaURL('https://www.antunesprojects.online')">
                     <img src="/assets/img-portifolio.png" alt="projeto de portifolio">
+                    <h1 class="projeto-texto-oculto">antunesprojects.online</h1>
                     <h1>Site de casamento</h1>
                     <div class="line"></div>
                     <p>Explore meu universo criativo neste projeto de portfólio, onde utilizei HTML para estruturar, CSS para estilizar e JavaScript para adicionar interatividade. Navegue pelas seções para descobrir mais sobre mim, meus projetos e habilidades.</p>
@@ -267,7 +270,7 @@
         </section>
         <section class="contato-container" id="contato">
             <h2>O QUE FAZER AGORA?</h2>
-            <h1>ENTRE EM CONATO COMIGO!</h1>
+            <h1>ENTRE EM CONTATO COMINGO!</h1>
             <p>Agora que você já conhece um pouco sobre mim e teve uma visão de alguns dos meus projetos, convido você a se juntar a mim na criação de uma experiência única para o seu público. Sinta-se à vontade para entrar em contato e agendarmos uma reunião. Estou ansioso para colaborarmos juntos!</p>
         <div class="contato-container-icones">
             <a href="">
