--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <a onclick="smoothScroll('#contato')">Contato</a>
         </section>
         <section class="nav-darkmode-button">
-            <button>Tema</button>
+            <button onclick="alternarModoNoturno()">Tema</button>
         </div>
     </nav>
     <aside>
