--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
         </section>
         <section class="contato-container" id="contato">
             <h2>O QUE FAZER AGORA?</h2>
-            <h1>ENTRE EM CONTATO COMINGO!</h1>
+            <h1>ENTRE EM CONTATO COMIGO!</h1>
             <p>Agora que você já conhece um pouco sobre mim e teve uma visão de alguns dos meus projetos, convido você a se juntar a mim na criação de uma experiência única para o seu público. Sinta-se à vontade para entrar em contato e agendarmos uma reunião. Estou ansioso para colaborarmos juntos!</p>
         <div class="contato-container-icones">
             <a href="">
