--- a/index.html
+++ b/index.html
@@ -99,6 +99,11 @@
                 </a>
             </div>
         </div>
+        <a class="aside-mobile-nav" onclick="goToNextSection()">
+            <svg width="800px" height="800px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M12 6V18M12 18L7 13M12 18L17 13" stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+            </svg>
+        </a>
     </aside>
     <main>
         <section class="trabalho-container">
