--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         <section class="projetos-container" id="projetos">
             <h1>Alguns projetos que já desenvolvi:</h1>
             <div class="projetos-container-galeria">
-                <div class="projeto" id="portifolio" aria-label="Projeto de Portfólio" onclick="redirecionarParaURL('https://www.antunesprojects.online')">
+                <div class="projeto" id="projetoA" aria-label="Projeto de Portfólio" onclick="redirecionarParaURL('https://www.antunesprojects.online')">
                     <h1 class="projeto-texto-oculto">antunesprojects.online</h1>
                     <img src="/assets/img-portifolio.png" alt="projeto de portifolio">
                     <h1>Portifólio</h1>
@@ -167,7 +167,7 @@
                         </a>
                     </div>
                 </div>
-                <div class="projeto" id="empresa" aria-label="Projeto da Empresa" onclick="redirecionarParaURL('https://www.mbembalagens.com')">
+                <div class="projeto" id="projetoB" aria-label="Projeto da Empresa" onclick="redirecionarParaURL('https://www.mbembalagens.com')">
                     <h1 class="projeto-texto-oculto">mbembalagens.com</h1>
                     <img src="/assets/img-portifolio.png" alt="projeto de portifolio">
                     <h1>Site empresarial</h1>
@@ -214,7 +214,7 @@
                         </a>
                     </div>
                 </div>
-                <div class="projeto" id="casamento" aria-label="Projeto de Casamento" onclick="redirecionarParaURL('https://www.antunesprojects.online')">
+                <div class="projeto" id="projetoC" aria-label="Projeto de Casamento" onclick="redirecionarParaURL('https://www.antunesprojects.online')">
                     <img src="/assets/img-portifolio.png" alt="projeto de portifolio">
                     <h1 class="projeto-texto-oculto">antunesprojects.online</h1>
                     <h1>Site de casamento</h1>
