--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
         <div class="sobre-container-texto">
             <h1>Sobre mim</h1>
             <p>Atualmente, desempenho minhas funções no setor de informática da empresa de combustíveis regional, a Comercial Buffon Transportes e Combustíveis Ltda. Minha responsabilidade inclui a configuração e suporte de servidores e sistemas, além da implementação de inovações que visam facilitar e simplificar as tarefas da equipe. Através dessas iniciativas, adentrei o universo do desenvolvimento web e da experiência do usuário, iniciando estudos para aplicar esses conhecimentos no meu trabalho e explorando novos horizontes. Agora, estou em busca de novas oportunidades que proporcionem experiências diferenciadas nesses campos, permitindo-me continuar meu desenvolvimento profissional.</p>
-            <a href="#sobre">Saber mais</a>
+            <a href="https://www.linkedin.com/in/antunesmatheus-contato/" target="_blank" >Saber mais</a>
         </div>    
         <div class="sobre-container-item">
 
@@ -316,7 +316,7 @@
                 </g>
             </svg>
                         </a>
-            <a href="">
+            <a href="https://www.linkedin.com/in/antunesmatheus-contato/" target="_blank">
             <svg width="800px" height="800px" viewBox="0 0 20 20" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
     
                 <title>Linkedin</title>
