--- a/index.html
+++ b/index.html
@@ -278,10 +278,10 @@
             <h1>ENTRE EM CONTATO COMIGO!</h1>
             <p>Agora que você já conhece um pouco sobre mim e teve uma visão de alguns dos meus projetos, convido você a se juntar a mim na criação de uma experiência única para o seu público. Sinta-se à vontade para entrar em contato e agendarmos uma reunião. Estou ansioso para colaborarmos juntos!</p>
         <div class="contato-container-icones">
-            <a href="">
+            <a href="https://wa.me/51992932492?text=Ola!%20Gostaria%20de%20criar%20um%20site" target="_blank">
             <svg width="800px" height="800px" viewBox="0 0 20 20" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
     
-                <title>Contato via Whatsapp</title>
+                <title>Whatsapp</title>
                 <desc>Created with Sketch.</desc>
                 <defs>
 
@@ -297,10 +297,10 @@
                 </g>
             </svg>
             </a>
-            <a href="">
+            <a href="mailto:antunesmatheus.contato@gmail.com" target="_blank">
             <svg width="800px" height="800px" viewBox="0 -2.5 20 20" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
     
-                <title>email [#1572]</title>
+                <title>Email</title>
                 <desc>Created with Sketch.</desc>
                 <defs>
 
